--- a/server/package.json
+++ b/server/package.json
@@ -8,13 +8,16 @@
     "test": "node test.js",
     "dev": "nodemon ."
   },
-  "author": "David Yakin",
+  "author": "Ruslan ",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "chalk": "^4.1.1",
+    "config": "^3.3.8",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.7.0",
+    "lodash": "^4.17.21",
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0"
   },
